added hero section

--- a/samplertrp.html
+++ b/samplertrp.html
@@ -27,12 +27,18 @@
             <button id="cartBtn"><i class="fas fa-shopping-cart">Cart</i></button>
         </div>
     </header>
-    <section class="hero">
-        <div class="image">
-            <img src="/assets/hero-banner.png" alt="hero section image">
-            <button class="enquiry">Make An Enquiry </button>
+    <section class="hero-section">
+        <div class="hero-container">
+            <div class="hero-content">
+                <span class="agency-tag">🏡 Real Estate Agency</span>
+                <h1>Find Your Dream <br> House By Us</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <button class="enquiry-btn">Make An Enquiry</button>
+            </div>
+            <div class="hero-image">
+                <img src="/assets/hero-banner.png" alt="House Banner">
+            </div>
         </div>
-
     </section>
 
 
