added the nav folder files

--- a/Nav-headers/properities.html
+++ b/Nav-headers/properities.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LandVerse</title>
+    <title>LandVerse - Properties</title>
     <link rel="stylesheet" href="/styles/properities.css">
 </head>
 <body>
-    <h1>Welcome to the Properities of the LandVerse</h1>
-    <h2>hello world!!</h2>
+    <header>
+        <div class="logo">LandVerse</div>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/Nav-headers/about.html">About</a></li>
+                <li><a href="/Nav-headers/services.html">Services</a></li>
+                <li><a href="/Nav-headers/properities.html" class="active">Properties</a></li>
+                <li><a href="/Nav-headers/contact.html">Contact</a></li>
+                <li><a href="/Nav-headers/blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Welcome to the Properties of the LandVerse</h1>
+        <h2>Explore our exclusive listings!</h2>
+    </main>
 </body>
 </html>
