--- a/Nav-headers/about.html
+++ b/Nav-headers/about.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LandVerse</title>
+    <title>LandVerse - About</title>
     <link rel="stylesheet" href="/styles/about.css">
 </head>
 <body>
-    <h1>Welcome to the About of the LandVerse</h1>
-
+    <header>
+        <div class="logo">LandVerse</div>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/Nav-headers/about.html" class="active">About</a></li>
+                <li><a href="/Nav-headers/services.html">Services</a></li>
+                <li><a href="/Nav-headers/properities.html">Properties</a></li>
+                <li><a href="/Nav-headers/contact.html">Contact</a></li>
+                <li><a href="/Nav-headers/blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Welcome to the About of the LandVerse</h1>
+    </main>
 </body>
 </html>
