changed the main file

--- a/samplertrp.html
+++ b/samplertrp.html
@@ -32,7 +32,7 @@
             <div class="hero-content">
                 <span class="agency-tag">🏡 Real Estate Agency</span>
                 <h1>Find Your Dream <br> House By Us</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <p>The platform where the bussiness and the vendors meets consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
                 <button class="enquiry-btn">Make An Enquiry</button>
             </div>
             <div class="hero-image">
