made the styling to the nav header files and made it the responsive

--- a/Nav-headers/blog.html
+++ b/Nav-headers/blog.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandVerse - Blog</title>
     <link rel="stylesheet" href="/styles/blog.css">
+    <style>
+    </style>
 </head>
 <body>
+
+    <!-- Header Section -->
     <header>
         <div class="logo">LandVerse</div>
         <nav>
@@ -20,8 +24,48 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Welcome to the Blog of the LandVerse</h1>
-    </main>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <h1>Welcome to the LandVerse Blog</h1>
+    </section>
+
+    <!-- Blog Section -->
+    <section class="blog-section">
+        <h2>Recent Blog Posts</h2>
+        
+        <div class="blog-container">
+            <!-- Blog Card 1 -->
+            <div class="blog-card">
+                <img src="/assets/blog1.jpg" alt="Smart Home Trends">
+                <h3>🏡 Smart Home Trends 2025</h3>
+                <p>Explore the latest trends and technologies in smart homes that are redefining modern living.</p>
+                <a href="#">Read More</a>
+            </div>
+
+            <!-- Blog Card 2 -->
+            <div class="blog-card">
+                <img src="/assets/blog2.jpg" alt="Best Locations">
+                <h3>🌿 Top Locations to Invest</h3>
+                <p>Find out the best locations to invest in real estate with high returns and growing demand.</p>
+                <a href="#">Read More</a>
+            </div>
+
+            <!-- Blog Card 3 -->
+            <div class="blog-card">
+                <img src="/assets/blog3.jpg" alt="Security Tips">
+                <h3>🔒 Security Tips for Your Home</h3>
+                <p>Learn how to enhance the security of your property with these expert tips.</p>
+                <a href="#">Read More</a>
+            </div>
+        </div>
+
+        <!-- Contact CTA -->
+        <div class="contact-cta">
+            <h3>Want to Learn More?</h3>
+            <a href="/Nav-headers/contact.html">Contact Us</a>
+        </div>
+    </section>
+
 </body>
 </html>
