--- a/Nav-headers/contact.html
+++ b/Nav-headers/contact.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandVerse - Contact</title>
     <link rel="stylesheet" href="/styles/contact.css">
+    <style>
+    </style>
 </head>
+
 <body>
+
+    <!-- Header Section -->
     <header>
         <div class="logo">LandVerse</div>
         <nav>
@@ -20,8 +26,49 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Welcome to the Contact of the LandVerse</h1>
-    </main>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <h1>Contact LandVerse</h1>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact-section">
+        <h2>Get in Touch with Us</h2>
+
+        <div class="contact-container">
+
+            <!-- Contact Details -->
+            <div class="contact-details">
+                <h3>📞 Contact Information</h3>
+                <p><strong>Address:</strong> 123 LandVerse Street, Hyderabad, India</p>
+                <p><strong>Email:</strong> <a href="mailto:support@landverse.com">support@landverse.com</a></p>
+                <p><strong>Phone:</strong> +91 98765 43210</p>
+                <p><strong>Working Hours:</strong> Mon - Fri, 9:00 AM - 6:00 PM</p>
+            </div>
+
+            <!-- Contact Form -->
+            <div class="contact-form">
+                <h3>📧 Send Us a Message</h3>
+                <form action="#" method="POST">
+                    <div class="form-group">
+                        <label for="name">Your Name</label>
+                        <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Your Email</label>
+                        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Your Message</label>
+                        <textarea id="message" name="message" placeholder="Write your message..." required></textarea>
+                    </div>
+                    <button type="submit">Send Message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
