--- a/Nav-headers/about.html
+++ b/Nav-headers/about.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandVerse - About</title>
     <link rel="stylesheet" href="/styles/about.css">
+    <style>
+        
+    </style>
 </head>
 <body>
+
+    <!-- Header Section -->
     <header>
         <div class="logo">LandVerse</div>
         <nav>
@@ -20,8 +25,38 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Welcome to the About of the LandVerse</h1>
-    </main>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <h1>Welcome to LandVerse</h1>
+    </section>
+
+    <!-- About Section -->
+    <section class="about-section">
+        <h2>About LandVerse</h2>
+        <p>LandVerse is a trusted name in real estate, offering a wide range of premium properties for buying, renting, and selling. We are committed to providing you with quality homes that match your dream lifestyle.</p>
+        
+        <div class="about-container">
+            <div class="about-card">
+                <h3>🏡 Smart Home Designs</h3>
+                <p>Our modern and innovative designs ensure a smarter and more efficient living space.</p>
+            </div>
+            <div class="about-card">
+                <h3>🌿 Beautiful Surroundings</h3>
+                <p>We provide properties in prime locations with breathtaking natural surroundings.</p>
+            </div>
+            <div class="about-card">
+                <h3>🔒 24/7 Security</h3>
+                <p>Your safety is our priority, with top-notch security systems in place.</p>
+            </div>
+        </div>
+
+        <!-- Contact CTA -->
+        <div class="contact-cta">
+            <h3>Ready to Find Your Dream Home?</h3>
+            <a href="/Nav-headers/contact.html">Contact Us</a>
+        </div>
+    </section>
+
 </body>
 </html>
