--- a/Nav-headers/properities.html
+++ b/Nav-headers/properities.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandVerse - Properties</title>
     <link rel="stylesheet" href="/styles/properities.css">
+    <style>
+    </style>
 </head>
+
 <body>
+
+    <!-- Header Section -->
     <header>
         <div class="logo">LandVerse</div>
         <nav>
@@ -20,9 +26,54 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Welcome to the Properties of the LandVerse</h1>
-        <h2>Explore our exclusive listings!</h2>
-    </main>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <h1>Explore Our Properties</h1>
+    </section>
+
+    <!-- Properties Section -->
+    <section class="properties-section">
+        <h2>Exclusive Listings</h2>
+
+        <div class="property-container">
+
+            <!-- Property Card 1 -->
+            <div class="property-card">
+                <img src="/assets/property1.jpg" alt="Luxury Villa" class="property-img">
+                <div class="property-content">
+                    <h3 class="property-title">Luxury Villa</h3>
+                    <p class="property-location">Hyderabad, India</p>
+                    <p class="property-price">₹3.5 Crore</p>
+                    <a href="#" class="btn">View Details</a>
+                </div>
+            </div>
+
+            <!-- Property Card 2 -->
+            <div class="property-card">
+                <img src="/assets/property2.jpg" alt="Modern Apartment" class="property-img">
+                <div class="property-content">
+                    <h3 class="property-title">Modern Apartment</h3>
+                    <p class="property-location">Bangalore, India</p>
+                    <p class="property-price">₹1.2 Crore</p>
+                    <a href="#" class="btn">View Details</a>
+                </div>
+            </div>
+
+            <!-- Property Card 3 -->
+            <div class="property-card">
+                <img src="/assets/property3.jpg" alt="Beachside Bungalow" class="property-img">
+                <div class="property-content">
+                    <h3 class="property-title">Beachside Bungalow</h3>
+                    <p class="property-location">Goa, India</p>
+                    <p class="property-price">₹5.8 Crore</p>
+                    <a href="#" class="btn">View Details</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
 </body>
+
 </html>
