--- a/Nav-headers/services.html
+++ b/Nav-headers/services.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandVerse - Services</title>
     <link rel="stylesheet" href="/styles/services.css">
+    <style>
+    </style>
 </head>
+
 <body>
+
+    <!-- Header Section -->
     <header>
         <div class="logo">LandVerse</div>
         <nav>
@@ -20,8 +26,53 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Welcome to the Services of the LandVerse</h1>
-    </main>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <h1>Explore Our Services</h1>
+    </section>
+
+    <!-- Services Section -->
+    <section class="services-section">
+        <h2>Our Premium Services</h2>
+
+        <div class="services-container">
+
+            <!-- Service Card 1 -->
+            <div class="service-card">
+                <div class="service-icon">🏡</div>
+                <h3 class="service-title">Property Buying</h3>
+                <p class="service-description">Find your dream home with ease through our wide range of premium listings.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+
+            <!-- Service Card 2 -->
+            <div class="service-card">
+                <div class="service-icon">📈</div>
+                <h3 class="service-title">Investment Consulting</h3>
+                <p class="service-description">Get expert advice on property investment for maximum returns.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+
+            <!-- Service Card 3 -->
+            <div class="service-card">
+                <div class="service-icon">🔑</div>
+                <h3 class="service-title">Property Management</h3>
+                <p class="service-description">We handle everything from tenant management to maintenance.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+
+            <!-- Service Card 4 -->
+            <div class="service-card">
+                <div class="service-icon">🏗️</div>
+                <h3 class="service-title">Real Estate Development</h3>
+                <p class="service-description">Partner with us for successful real estate development projects.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+
+        </div>
+    </section>
+
 </body>
+
 </html>
