added hover effects to the nav sections

--- a/Nav-headers/about.html
+++ b/Nav-headers/about.html
@@ -16,7 +16,7 @@
         <div class="logo">LandVerse</div>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/samplertrp.html">Home</a></li>
                 <li><a href="/Nav-headers/about.html" class="active">About</a></li>
                 <li><a href="/Nav-headers/services.html">Services</a></li>
                 <li><a href="/Nav-headers/properities.html">Properties</a></li>
@@ -28,7 +28,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Welcome to LandVerse</h1>
+        <h1 style="color: #ff5e57;">Welcome to LandVerse</h1>
     </section>
 
     <!-- About Section -->
