--- a/Nav-headers/blog.html
+++ b/Nav-headers/blog.html
@@ -15,7 +15,7 @@
         <div class="logo">LandVerse</div>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/samplertrp.html">Home</a></li>
                 <li><a href="/Nav-headers/about.html">About</a></li>
                 <li><a href="/Nav-headers/services.html">Services</a></li>
                 <li><a href="/Nav-headers/properities.html">Properties</a></li>
@@ -27,7 +27,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Welcome to the LandVerse Blog</h1>
+        <h1 style="color: #ff5e57;">Welcome to the LandVerse Blog</h1>
     </section>
 
     <!-- Blog Section -->
