--- a/Nav-headers/contact.html
+++ b/Nav-headers/contact.html
@@ -17,7 +17,7 @@
         <div class="logo">LandVerse</div>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/samplertrp.html">Home</a></li>
                 <li><a href="/Nav-headers/about.html">About</a></li>
                 <li><a href="/Nav-headers/services.html">Services</a></li>
                 <li><a href="/Nav-headers/properities.html">Properties</a></li>
@@ -29,7 +29,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Contact LandVerse</h1>
+        <h1 style="color: #ff5e57;">Contact LandVerse</h1>
     </section>
 
     <!-- Contact Section -->
