--- a/Nav-headers/properities.html
+++ b/Nav-headers/properities.html
@@ -17,7 +17,7 @@
         <div class="logo">LandVerse</div>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/samplertrp.html">Home</a></li>
                 <li><a href="/Nav-headers/about.html">About</a></li>
                 <li><a href="/Nav-headers/services.html">Services</a></li>
                 <li><a href="/Nav-headers/properities.html" class="active">Properties</a></li>
@@ -29,7 +29,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Explore Our Properties</h1>
+        <h1 style="color: #ff5e57;">Explore Our Properties</h1>
     </section>
 
     <!-- Properties Section -->
