--- a/Nav-headers/properities.html
+++ b/Nav-headers/properities.html
@@ -40,7 +40,7 @@
 
             <!-- Property Card 1 -->
             <div class="property-card">
-                <img src="/assets/property1.jpg" alt="Luxury Villa" class="property-img">
+                <img src="https://i.pinimg.com/originals/d8/c7/0c/d8c70c58d6dc18399e899efe353cbe01.jpg" alt="Luxury Villa" class="property-img">
                 <div class="property-content">
                     <h3 class="property-title">Luxury Villa</h3>
                     <p class="property-location">Hyderabad, India</p>
@@ -51,7 +51,7 @@
 
             <!-- Property Card 2 -->
             <div class="property-card">
-                <img src="/assets/property2.jpg" alt="Modern Apartment" class="property-img">
+                <img src="https://th.bing.com/th/id/OIP.9k0JjGJhFH4tjGOUQbTdjQHaEL?rs=1&pid=ImgDetMain" alt="Modern Apartment" class="property-img">
                 <div class="property-content">
                     <h3 class="property-title">Modern Apartment</h3>
                     <p class="property-location">Bangalore, India</p>
@@ -62,7 +62,7 @@
 
             <!-- Property Card 3 -->
             <div class="property-card">
-                <img src="/assets/property3.jpg" alt="Beachside Bungalow" class="property-img">
+                <img src="https://th.bing.com/th/id/OIP.OzAWmF9XqdntY-fkDprWcwHaE7?rs=1&pid=ImgDetMain" alt="Beachside Bungalow" class="property-img">
                 <div class="property-content">
                     <h3 class="property-title">Beachside Bungalow</h3>
                     <p class="property-location">Goa, India</p>
