--- a/samplertrp.html
+++ b/samplertrp.html
@@ -139,6 +139,56 @@
           </div>
         </div>
       </section>
+      <footer>
+        <div class="footer-container">
+            <div class="footer-section company-info">
+                <h2 class="logo">🏠 Homeverse</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>📍 Brooklyn, New York, United States</p>
+                <p>📞 +0123-456789</p>
+                <p>📧 contact@homeverse.com</p>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h3>Company</h3>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">All Products</a></li>
+                    <li><a href="#">Locations Map</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Services</h3>
+                <ul>
+                    <li><a href="#">Order Tracking</a></li>
+                    <li><a href="#">Wish List</a></li>
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#">My Account</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Promotional Offers</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Customer Care</h3>
+                <ul>
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#">My Account</a></li>
+                    <li><a href="#">Wish List</a></li>
+                    <li><a href="#">Order Tracking</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
       
     <script src="/js/rtrp.js"></script>
 </body>
