news and blogs section done need pics to complete it

--- a/samplertrp.html
+++ b/samplertrp.html
@@ -139,6 +139,37 @@
           </div>
         </div>
       </section>
+
+      <section class="news-section">
+        <div class="container">
+            <h5 class="section-tag">News & Blogs</h5>
+            <h2 class="section-title">Latest News Feeds</h2>
+            <div class="news-container">
+                <div class="news-card">
+                    <img src="img1.jpg" alt="Interior Design" />
+                    <div class="news-content">
+                        <p class="news-meta">by: Admin <span>● Interior</span></p>
+                        <h3 class="news-title">The Most Inspiring Interior Design Of 2021</h3>
+                    </div>
+                </div>
+                <div class="news-card">
+                    <img src="img2.jpg" alt="Real Estate" />
+                    <div class="news-content">
+                        <p class="news-meta">by: Admin <span>● Estate</span></p>
+                        <h3 class="news-title">Recent Commercial Real Estate Transactions</h3>
+                    </div>
+                </div>
+                <div class="news-card">
+                    <img src="img3.jpg" alt="Living Room" />
+                    <div class="news-content">
+                        <p class="news-meta">by: Admin <span>● Room</span></p>
+                        <h3 class="news-title">Renovating a Living Room? Experts Share Their Secrets</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
       
     <script src="/js/rtrp.js"></script>
 </body>
