added icons to the website

--- a/samplertrp.html
+++ b/samplertrp.html
@@ -6,6 +6,7 @@
     <title>LandVerse - Real Estate</title>
     <link rel="stylesheet" href="/styles/samplertrp.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
 
@@ -22,9 +23,9 @@
             </ul>
         </nav>
         <div class="header-icons">
-            <button id="searchBtn"><i class="fas fa-search">search</i></button>
-            <button id="profileBtn"><i class="fas fa-user">Profile</i></button>
-            <button id="cartBtn"><i class="fas fa-shopping-cart">Cart</i></button>
+            <button id="searchBtn"><i class="fa-solid fa-magnifying-glass"></i></button>
+            <button id="profileBtn"><i class="fa-solid fa-user"></i></button>
+            <button id="cartBtn"><i class="fa-solid fa-cart-shopping"></i></button>
         </div>
     </header>
     <section class="hero-section">
