--- a/samplertrp.html
+++ b/samplertrp.html
@@ -174,7 +174,7 @@
       <div class="footer-container">
           <div class="footer-about">
               <h2 class="footer-logo"><i class="fas fa-building"></i> Landverse</h2>
-              <p>Lorem Ipsum is simply dummy text of the typesetting industry. Lorem Ipsum is dummy text of the printing.</p>
+              <p>A platform that connects businesses and vendors, fostering collaboration and growth.</p>
               <ul class="footer-contact">
                   <li><i class="fas fa-map-marker-alt"></i> Brooklyn, New York, United States</li>
                   <li><i class="fas fa-phone"></i> +0123-456789</li>
