added the login and register pages

--- a/samplertrp.html
+++ b/samplertrp.html
@@ -191,12 +191,12 @@
               <div>
                   <h3>Company</h3>
                   <ul>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Blog</a></li>
+                      <li><a href="/Nav-headers/about.html">About</a></li>
+                      <li><a href="/Nav-headers/blog.html">Blog</a></li>
                       <li><a href="#">All Products</a></li>
                       <li><a href="#">Locations Map</a></li>
                       <li><a href="#">FAQ</a></li>
-                      <li><a href="#">Contact us</a></li>
+                      <li><a href="/Nav-headers/contact.html">Contact us</a></li>
                   </ul>
               </div>
               <div>
@@ -204,7 +204,7 @@
                   <ul>
                       <li><a href="#">Order tracking</a></li>
                       <li><a href="#">Wish List</a></li>
-                      <li><a href="#">Login</a></li>
+                      <li><a href="/Nav-headers/login.html">Login</a></li>
                       <li><a href="#">My account</a></li>
                       <li><a href="#">Terms & Conditions</a></li>
                       <li><a href="#">Promotional Offers</a></li>
@@ -217,8 +217,8 @@
                       <li><a href="#">My account</a></li>
                       <li><a href="#">Wish List</a></li>
                       <li><a href="#">Order tracking</a></li>
-                      <li><a href="#">FAQ</a></li>
-                      <li><a href="#">Contact us</a></li>
+                      <li><a href="/Nav-headers/register.html">Register</a></li>
+                      <li><a href="/Nav-headers/contact.html">Contact us</a></li>
                   </ul>
               </div>
           </div>
