added the nav register

--- a/Nav-headers/login.html
+++ b/Nav-headers/login.html
@@ -5,6 +5,10 @@
     <div class="heading">Sign In</div>
     <form action="" class="form">
         <label>
+            <input required="" class="input" type="text" name="username" id="username" placeholder="">
+            <span>Username</span>
+        </label>
+        <label>
             <input required="" class="input" type="email" name="email" id="email" placeholder="">
             <span>Email</span>
         </label>
