--- a/samplertrp.html
+++ b/samplertrp.html
@@ -20,6 +20,8 @@
                 <li><a href="/Nav-headers/properities.html">Properties</a></li>
                 <li><a href="/Nav-headers/contact.html">Contact</a></li>
                 <li><a href="/Nav-headers/blog.html">Blog</a></li>
+                <li><a href="/Nav-headers/login.html"></a>Login</li>
+                <li><a href="/Nav-headers/register.html">Register</a></li>
             </ul>
         </nav>
         <div class="header-icons">
@@ -213,7 +215,7 @@
               <div>
                   <h3>Customer Care</h3>
                   <ul>
-                      <li><a href="#">Login</a></li>
+                      <li><a href="/Nav-headers/login.html">Login</a></li>
                       <li><a href="#">My account</a></li>
                       <li><a href="#">Wish List</a></li>
                       <li><a href="#">Order tracking</a></li>
