--- a/samplertrp.html
+++ b/samplertrp.html
@@ -20,7 +20,7 @@
                 <li><a href="/Nav-headers/properities.html">Properties</a></li>
                 <li><a href="/Nav-headers/contact.html">Contact</a></li>
                 <li><a href="/Nav-headers/blog.html">Blog</a></li>
-                <li><a href="/Nav-headers/login.html"></a>Login</li>
+                <li><a href="/Nav-headers/login.html">Login</a></li>
                 <li><a href="/Nav-headers/register.html">Register</a></li>
             </ul>
         </nav>
