added the services section

--- a/samplertrp.html
+++ b/samplertrp.html
@@ -58,7 +58,7 @@
                 <li>🌟 Exceptional Lifestyle</li>
                 <li>🔒 Complete 24/7 Security</li>
             </ul>
-            <a href="example.html">
+            <a href="/Nav-headers/services.html">
                 <button>Our Services</button>
               </a>              
         </div>
