--- a/samplertrp.html
+++ b/samplertrp.html
@@ -178,8 +178,8 @@
               <h2 class="footer-logo"><i class="fas fa-building"></i> Landverse</h2>
               <p>A platform that connects businesses and vendors, fostering collaboration and growth.</p>
               <ul class="footer-contact">
-                  <li><i class="fas fa-map-marker-alt"></i> Brooklyn, New York, United States</li>
-                  <li><i class="fas fa-phone"></i> +0123-456789</li>
+                  <li><i class="fas fa-map-marker-alt"></i> Hyderabad, TS, India</li>
+                  <li><i class="fas fa-phone"></i>+91 999999999</li>
                   <li><i class="fas fa-envelope"></i> contact@Landverse.com</li>
               </ul>
               <div class="footer-socials">
