added s to platform

--- a/samplertrp.html
+++ b/samplertrp.html
@@ -35,7 +35,7 @@
             <div class="hero-content">
                 <span class="agency-tag">🏡 Real Estate Agency</span>
                 <h1>Find Your Dreams <br> House By Us</h1>
-                <p>A platform that connects businesses and vendors, fostering collaboration and growth. It streamlines interactions, enhances opportunities, and supports seamless transactions for mutual success in a dynamic marketplace.</p>
+                <p>A platforms that connects businesses and vendors, fostering collaboration and growth. It streamlines interactions, enhances opportunities, and supports seamless transactions for mutual success in a dynamic marketplace.</p>
                 <button class="enquiry-btn">Make An Enquiry</button>
             </div>
             <div class="hero-image">
@@ -195,9 +195,9 @@
                   <ul>
                       <li><a href="/Nav-headers/about.html">About</a></li>
                       <li><a href="/Nav-headers/blog.html">Blog</a></li>
-                      <li><a href="#">All Products</a></li>
+                      <li><a href="/Footers/allproducts.html">All Products</a></li>
                       <li><a href="#">Locations Map</a></li>
-                      <li><a href="#">FAQ</a></li>
+                      <li><a href="/Footers/Faqs.html">FAQ</a></li>
                       <li><a href="/Nav-headers/contact.html">Contact us</a></li>
                   </ul>
               </div>
@@ -205,11 +205,11 @@
                   <h3>Services</h3>
                   <ul>
                       <li><a href="#">Order tracking</a></li>
-                      <li><a href="#">Wish List</a></li>
+                      <li><a href="/Footers/wishlist.html">Wish List</a></li>
                       <li><a href="/Nav-headers/login.html">Login</a></li>
                       <li><a href="#">My account</a></li>
-                      <li><a href="#">Terms & Conditions</a></li>
-                      <li><a href="#">Promotional Offers</a></li>
+                      <li><a href="/Footers/terms&conditions.html">Terms & Conditions</a></li>
+                      <li><a href="/Footers/promotionaloffers.html">Promotional Offers</a></li>
                   </ul>
               </div>
               <div>
@@ -217,7 +217,7 @@
                   <ul>
                       <li><a href="/Nav-headers/login.html">Login</a></li>
                       <li><a href="#">My account</a></li>
-                      <li><a href="#">Wish List</a></li>
+                      <li><a href="/Footers/wishlist.html">Wish List</a></li>
                       <li><a href="#">Order tracking</a></li>
                       <li><a href="/Nav-headers/register.html">Register</a></li>
                       <li><a href="/Nav-headers/contact.html">Contact us</a></li>
