changed the faq's

--- a/Footers/allproducts.html
+++ b/Footers/allproducts.html
@@ -3,12 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All products</title>
-    <style>
-        
-    </style>
+    <title>All Products</title>
+    <link rel="stylesheet" href="/styles/samplertrp.css">
 </head>
 <body>
-    <h1>Welcome to the ALL PRODUCTS Section!!</h1>
+    <header>
+        <div class="logo">LandVerse</div>
+        <nav>
+            <ul>
+                <li><a href="/samplertrp.html">Home</a></li>
+                <li><a href="/Nav-headers/about.html">About</a></li>
+                <li><a href="/Nav-headers/services.html">Services</a></li>
+                <li><a href="/Nav-headers/properities.html">Properties</a></li>
+                <li><a href="/Nav-headers/contact.html">Contact</a></li>
+                <li><a href="/Nav-headers/blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero-section">
+        <div class="hero-container">
+            <div class="hero-content">
+                <h1>All Products</h1>
+                <p>Explore our wide range of products tailored to meet your needs.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="about">
+        <div class="content">
+            <h2>Our Products</h2>
+            <p>Discover the best products in the real estate market, designed to provide you with the best living experience.</p>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-about">
+                <h2 class="footer-logo"><i class="fas fa-building"></i> LandVerse</h2>
+                <p>Connecting businesses and vendors for seamless collaboration and growth.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
