--- a/Footers/promotionaloffers.html
+++ b/Footers/promotionaloffers.html
@@ -3,12 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promotional offers</title>
-    <style>
-        
-    </style>
+    <title>Promotional Offers</title>
+    <link rel="stylesheet" href="/styles/samplertrp.css">
 </head>
 <body>
-    <h1>Welcome to the Promotional Offers!!</h1>
+    <header>
+        <div class="logo">LandVerse</div>
+        <nav>
+            <ul>
+                <li><a href="/samplertrp.html">Home</a></li>
+                <li><a href="/Nav-headers/about.html">About</a></li>
+                <li><a href="/Nav-headers/services.html">Services</a></li>
+                <li><a href="/Nav-headers/properities.html">Properties</a></li>
+                <li><a href="/Nav-headers/contact.html">Contact</a></li>
+                <li><a href="/Nav-headers/blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero-section">
+        <div class="hero-container">
+            <div class="hero-content">
+                <h1>Promotional Offers</h1>
+                <p>Check out our latest promotional offers and deals.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="about">
+        <div class="content">
+            <h2>Exclusive Offers</h2>
+            <p>Take advantage of our limited-time promotional offers to get the best deals.</p>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-about">
+                <h2 class="footer-logo"><i class="fas fa-building"></i> LandVerse</h2>
+                <p>Connecting businesses and vendors for seamless collaboration and growth.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
