--- a/Footers/terms&conditions.html
+++ b/Footers/terms&conditions.html
@@ -3,12 +3,225 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms and conditions</title>
+    <title>Terms and Conditions | LandVerse</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="/styles/samplertrp.css">
     <style>
-        
+        /* General Styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        body {
+            background-color: #f8f9fa;
+            color: #333;
+        }
+
+        /* Header */
+        header {
+            background: white;
+            padding: 15px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo {
+            font-size: 24px;
+            font-weight: bold;
+            color: #ff5a5f;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 20px;
+        }
+
+        nav ul li {
+            display: inline;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: black;
+            font-size: 16px;
+            transition: color 0.3s;
+        }
+
+        nav ul li a:hover {
+            color: #ff5a5f;
+        }
+
+        /* Hero Section */
+        .hero-section {
+            background: url('https://source.unsplash.com/1600x500/?law,terms') no-repeat center/cover;
+            height: 250px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            text-align: center;
+            margin-left: 350px;
+        }
+
+        .hero-content h1 {
+            font-size: 36px;
+            margin-bottom: 10px;
+        }
+
+        /* Terms Section */
+        .terms-section {
+            padding: 50px;
+            background-color: #fff;
+            max-width: 800px;
+            margin: auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .terms-section h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #2c3e50;
+        }
+
+        .terms {
+            background: #f9f9f9;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .terms-question {
+            width: 100%;
+            background: none;
+            border: none;
+            text-align: left;
+            font-size: 18px;
+            font-weight: bold;
+            cursor: pointer;
+            padding: 15px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: #2c3e50;
+        }
+
+        .toggle-icon {
+            font-size: 20px;
+            transition: transform 0.3s;
+        }
+
+        .terms-answer {
+            display: none;
+            padding: 15px;
+            color: #666;
+            font-size: 16px;
+        }
+
+        /* Footer */
+        .footer {
+            background: #2c3e50;
+            padding: 20px;
+            text-align: center;
+            color: white;
+            margin-top: 50px;
+        }
+
+        .footer-logo {
+            font-size: 20px;
+        }
+
+        .footer p {
+            font-size: 14px;
+            margin-top: 5px;
+        }
     </style>
 </head>
 <body>
-    <h1>Welcome to the Terms and conditions of the Landverse!!</h1>
+
+    <header>
+        <div class="logo">LandVerse</div>
+        <nav>
+            <ul>
+                <li><a href="/samplertrp.html">Home</a></li>
+                <li><a href="/Nav-headers/about.html">About</a></li>
+                <li><a href="/Nav-headers/services.html">Services</a></li>
+                <li><a href="/Nav-headers/properities.html">Properties</a></li>
+                <li><a href="/Nav-headers/contact.html">Contact</a></li>
+                <li><a href="/Nav-headers/blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero-section">
+        <div class="hero-container">
+            <div class="hero-content">
+                <h1>Terms and Conditions</h1>
+                <p>Understand the terms and conditions of using our platform.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="terms-section">
+        <h2>Our Terms</h2>
+
+        <div class="terms">
+            <button class="terms-question">Acceptance of Terms <span class="toggle-icon">^</span></button>
+            <p class="terms-answer">By accessing or using our services, you agree to comply with these terms and all applicable laws.</p>
+        </div>
+
+        <div class="terms">
+            <button class="terms-question">User Responsibilities <span class="toggle-icon">^</span></button>
+            <p class="terms-answer">Users must provide accurate information and not engage in any fraudulent or malicious activities.</p>
+        </div>
+
+        <div class="terms">
+            <button class="terms-question">Privacy Policy <span class="toggle-icon">^</span></button>
+            <p class="terms-answer">We take your privacy seriously. Please review our Privacy Policy to understand how we handle your data.</p>
+        </div>
+
+        <div class="terms">
+            <button class="terms-question">Prohibited Activities <span class="toggle-icon">^</span></button>
+            <p class="terms-answer">Users must not post illegal, offensive, or misleading content on our platform.</p>
+        </div>
+
+        <div class="terms">
+            <button class="terms-question">Modification of Terms <span class="toggle-icon">^</span></button>
+            <p class="terms-answer">We reserve the right to modify these terms at any time. Continued use of our services implies acceptance of the updated terms.</p>
+        </div>
+
+        <div class="terms">
+            <button class="terms-question">Termination Policy <span class="toggle-icon">^</span></button>
+            <p class="terms-answer">We may terminate or suspend your access to our services if you violate any of these terms.</p>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <h2 class="footer-logo"><i class="fas fa-building"></i> LandVerse</h2>
+        <p>Connecting businesses and vendors for seamless collaboration and growth.</p>
+    </footer>
+
+    <script>
+        document.querySelectorAll('.terms-question').forEach(button => {
+            button.addEventListener('click', () => {
+                const answer = button.nextElementSibling;
+                const icon = button.querySelector('.toggle-icon');
+
+                if (answer.style.display === "block") {
+                    answer.style.display = "none";
+                    icon.style.transform = "rotate(0deg)";
+                } else {
+                    answer.style.display = "block";
+                    icon.style.transform = "rotate(180deg)";
+                }
+            });
+        });
+    </script>
+
 </body>
 </html>
