--- a/Footers/terms&conditions.html
+++ b/Footers/terms&conditions.html
@@ -140,6 +140,108 @@
             font-size: 14px;
             margin-top: 5px;
         }
+        /* Responsive Design */
+
+/* Tablets (max-width: 1024px) */
+@media screen and (max-width: 1024px) {
+    .hero-section {
+        height: 200px;
+        background-position: center;
+    }
+
+    .terms-section {
+        padding: 30px;
+        max-width: 90%;
+    }
+
+    nav ul {
+        gap: 15px;
+    }
+
+    .terms-question {
+        font-size: 16px;
+        padding: 12px;
+    }
+}
+
+/* Mobile Devices (max-width: 768px) */
+@media screen and (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    nav ul {
+        flex-direction: column;
+        gap: 10px;
+        padding-top: 10px;
+    }
+
+    .hero-section {
+        height: 180px;
+        padding: 20px;
+        text-align: center;
+        background-size: cover;
+    }
+
+    .hero-content h1 {
+        font-size: 28px;
+    }
+
+    .terms-section {
+        padding: 20px;
+        max-width: 95%;
+    }
+
+    .terms-question {
+        font-size: 16px;
+        padding: 10px;
+    }
+}
+
+/* Small Mobile Devices (max-width: 480px) */
+@media screen and (max-width: 480px) {
+    .logo {
+        font-size: 20px;
+    }
+
+    .hero-section {
+        height: 150px;
+        padding: 15px;
+    }
+
+    .hero-content h1 {
+        font-size: 24px;
+    }
+
+    .terms-section {
+        padding: 15px;
+        max-width: 100%;
+    }
+
+    .terms-question {
+        font-size: 14px;
+        padding: 8px;
+    }
+
+    .toggle-icon {
+        font-size: 16px;
+    }
+
+    .footer {
+        padding: 15px;
+    }
+
+    .footer-logo {
+        font-size: 18px;
+    }
+
+    .footer p {
+        font-size: 12px;
+    }
+}
+
     </style>
 </head>
 <body>
