--- a/Nav-headers/blog.html
+++ b/Nav-headers/blog.html
@@ -6,6 +6,108 @@
     <title>LandVerse - Blog</title>
     <link rel="stylesheet" href="/styles/blog.css">
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 2rem;
+            background-color: #2c3e50;
+            color: white;
+        }
+
+        .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 1rem;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+        }
+
+        nav a.active {
+            text-decoration: underline;
+        }
+
+        .hero {
+            background-color: #f8f8f8;
+            text-align: center;
+            padding: 2rem;
+        }
+
+        .blog-section {
+            padding: 2rem;
+        }
+
+        .blog-container {
+            display: flex;
+            gap: 2rem;
+            flex-wrap: wrap;
+        }
+
+        .blog-card {
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+            padding: 1rem;
+            width: 30%;
+        }
+
+        .blog-card img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+
+        .blog-card h3 {
+            margin: 1rem 0 0.5rem;
+        }
+
+        .blog-card p {
+            margin-bottom: 1rem;
+        }
+
+        .blog-card a {
+            color: #f1f1f1;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .contact-cta {
+            margin-top: 3rem;
+            text-align: center;
+        }
+
+        .contact-cta a {
+            display: inline-block;
+            margin-top: 1rem;
+            background-color: #ff5e57;
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+
+        .blog-full-content {
+            margin-top: 3rem;
+            padding: 1.5rem;
+            background-color: #f1f1f1;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
@@ -60,12 +162,45 @@
             </div>
         </div>
 
+        <!-- Hidden blog details -->
+        <div id="blog1-details" style="display: none;">
+            <h2>🏡 Smart Home Trends 2025</h2>
+            <p>Smart homes are evolving fast in 2025! With IoT, AI assistants, and energy-efficient systems, homeowners enjoy convenience and security like never before. From automated lighting to voice-controlled everything, the future is now.</p>
+        </div>
+
+        <div id="blog2-details" style="display: none;">
+            <h2>🌿 Top Locations to Invest</h2>
+            <p>Real estate hotspots for 2025 include green suburban areas with excellent connectivity. Cities expanding infrastructure like metro lines and smart governance are offering high ROI for long-term investors.</p>
+        </div>
+
+        <div id="blog3-details" style="display: none;">
+            <h2>🔒 Security Tips for Your Home</h2>
+            <p>Upgrade your home’s safety with smart locks, CCTV, motion sensors, and remote monitoring. Always lock windows and doors, and consider professional security systems for added peace of mind.</p>
+        </div>
+
+        <!-- Where blog details appear -->
+        <div id="blog-full-content" class="blog-full-content"></div>
+
         <!-- Contact CTA -->
         <div class="contact-cta">
             <h3>Want to Learn More?</h3>
             <a href="/Nav-headers/contact.html">Contact Us</a>
         </div>
     </section>
+
+    <!-- JavaScript to show details -->
+    <script>
+        document.querySelectorAll('.blog-card a').forEach((link, index) => {
+            link.addEventListener('click', (e) => {
+                e.preventDefault();
+                const fullContent = document.getElementById('blog-full-content');
+                const detailId = `blog${index + 1}-details`;
+                const detailContent = document.getElementById(detailId).innerHTML;
+                fullContent.innerHTML = detailContent;
+                fullContent.scrollIntoView({ behavior: 'smooth' });
+            });
+        });
+    </script>
 
 </body>
 </html>
